Maybe make things work on gitea?

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -17,6 +17,6 @@ jobs:
       - uses: ./.
         with:
           ghcr_user: matthewbaggett
-          ghcr_token: ${{ secrets.GITHUB_TOKEN }}
+          ghcr_token: ${{ secrets.GITHUB_TOKEN || secrets.GHCR_TOKEN }}
           docker_hub_user: matthewbaggett
           docker_hub_token: ${{ secrets.DOCKER_HUB_TOKEN }}
